// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NoResults correctly applies the theme context className 1`] = `
<ThemeContextProvider
  theme={
    Object {
      "className": "orion-fusion-theme",
    }
  }
>
  <NoResults
    value="value"
  >
    <div
      aria-selected="false"
      className="no-results orion-fusion-theme"
      role="option"
    >
      <FormattedMessage
        id="Terra.form.select.noResults"
        values={
          Object {
            "text": "value",
          }
        }
      >
        Terra.form.select.noResults
      </FormattedMessage>
    </div>
  </NoResults>
</ThemeContextProvider>
`;

exports[`NoResults should render NoResults with custom content 1`] = `
<div
  aria-selected="false"
  className="no-results"
  role="option"
>
  <div>
    Custom
  </div>
</div>
`;

exports[`NoResults should render a default NoResults 1`] = `
<div
  aria-selected="false"
  className="no-results"
  role="option"
>
  <MemoizedFormattedMessage
    id="Terra.form.select.noResults"
    values={
      Object {
        "text": "value",
      }
    }
  />
</div>
`;
